--- a/Exercise#3/package.json
+++ b/Exercise#3/package.json
@@ -4,14 +4,17 @@
   "description": "Exercise#03",
   "main": "index.js",
   "scripts": {
-    "start": "node index",
+    "start": "nodemon index",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.3.2",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
     "moment": "^2.29.4",
+    "morgan": "^1.10.0",
     "node-fetch": "^3.3.0"
   }
 }
